deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eventshuffle-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: eventshuffle-api
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  minReadySeconds: 5
  template:
    metadata:
      labels:
        app: eventshuffle-api
    spec:
      containers:
      - name: eventshuffle-api
        image: gcr.io/PROJECT_ID/IMAGE:TAG
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: 100m
          limits:
            cpu: 100m
