service.yml
apiVersion: v1
kind: Service
metadata:
  name: eventshuffle-api-service
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: eventshuffle-api
